# somfy-rs

./: .gitignore  Cargo.toml  Rakefile  ReadMe.md  inventory.yml  playbook.yml  requirements.yml  rustfmt.toml
.cargo/: runner
src/: command.rs  frame.rs  lib.rs  main.rs  remote.rs  sender.rs  spi_sender.rs  storage.rs  thing.rs
