[package]
name = "somfy"
version = "0.1.0"
edition = "2018"

[dependencies]
ux = { package = "ux_serde", version = "0.2", features = ["serde"] }
embedded-hal = "1"
rppal = { version = "0.18", features = ["embedded-hal"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "4"
log = "0.4"
env_logger = "0.11"
spin_sleep = "1"
webthing = { version = "0.15", optional = true }
uuid = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
actix-rt = { version = "2", optional = true }

[features]
server = ["actix-rt", "webthing", "uuid", "serde_json"]

[dev-dependencies]
tempfile = "3.3.0"
