[package]
name = "somfy"
version = "0.1.0"
edition = "2021"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "A library for controlling Somfy equipment."
documentation = "https://docs.rs/somfy"
repository = "https://github.com/reitermarkus/somfy-rs"
homepage = "https://github.com/reitermarkus/somfy-rs"

[dependencies]
actix-rt = { version = "2", optional = true }
clap = { version = "4", optional = true }
ux = { package = "ux_serde", version = "0.2" }
embedded-hal = "1"
env_logger = { version = "0.11", optional = true }
log = "0.4"
rppal = { version = "0.18", features = ["embedded-hal"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
webthing = { version = "0.15", optional = true }
uuid = { version = "1", optional = true }

[features]
serde = ["dep:serde", "ux/serde"]
cli = ["dep:clap", "dep:env_logger", "dep:actix-rt", "dep:serde_yaml", "serde"]
server = ["webthing", "uuid", "serde_json"]

[[bin]]
name = "somfy"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3.3.0"
